2005-02-22  Derek Price  <derek@ximbiot.com>

	* run.c: Sync with src/run.c.
	(Patch from Conrad Pino <conrad@pino.com>.)

	* run.c (run_add_arg): Some cleanup.

2005-02-22  Derek Price  <derek@ximbiot.com>

	* run.c: Remove several unneeded declarations.
	(Suggestion from Conrad Pino <conrad@pino.com>.)

2005-01-31  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Update copyright notices.

2004-12-14  Derek Price  <derek@ximbiot.com>

	* Makefile.am (stamp-chi): Comment dist stamp-chi reasoning.

2004-12-14  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add stamp-chi.
	(config.h.in, stamp-chi, DISTCLEANFILES, MAINTAINERCLEANFILES):
	Reorganize for distributing stamp-chi.
	* stamp-chi: Restore this file.

2004-12-14  Derek Price  <derek@ximbiot.com>

	* stamp-chi: Remove this file - it is generated only in maintainer
	mode.

2004-11-29  Conrad T. Pino  <Conrad@Pino.com>

	* unistd.h: FIXME gethostname prototype for lib/xgethostname.c

2004-11-17  Derek Price  <derek@ximbiot.com>

	* mkconfig.pl (make_config_h): Use stricter regex to avoid warning of
	the use of "#define" in comments.

2004-11-17  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add JmgStat.c & JmgStat.h.
	(Thanks to a report from Chris Bohn <cbohn@rrinc.com>.)

2004-11-17  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add unistd.h.
	(Thanks to a report from Chris Bohn <cbohn@rrinc.com>.)

2004-11-17  Derek Price  <derek@ximbiot.com>

	* config.h.in.in (getopt, getopt_long, getopt_long_only, optarg,
	opterr, optind, optopt): Remove obsolete definitions.
	(__GETOPT_PREFIX): Define this for GNULIB getopt.

2004-11-16  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Remove stamp-chi.
	($(srcdir)/stamp-chi, $(srcdir)/config.h.in): Rename to...
	(stamp-chi, config.h.in): Respectively, including associated required
	target changes.

2004-11-16  Derek Price  <derek@ximbiot.com>

	* Makefile.am (stamp-ch): Replace dependency on Makefile with a